// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeAreaProvider does not render child until inset values are received 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`SafeAreaProvider renders 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`SafeAreaProvider renders child when inset values are received 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`SafeAreaProvider renders child when inset values are received 2`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 100,
        "left": 0,
        "paddingBottom": 4,
        "paddingLeft": 2,
        "paddingRight": 3,
        "paddingTop": 1,
        "top": 0,
        "width": 100,
      }
    }
  />
</RNCSafeAreaView>
`;

exports[`SafeAreaProvider supports setting initial insets 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 100,
        "left": 0,
        "paddingBottom": 4,
        "paddingLeft": 2,
        "paddingRight": 3,
        "paddingTop": 1,
        "top": 0,
        "width": 100,
      }
    }
  />
</RNCSafeAreaView>
`;

exports[`SafeAreaProvider uses inner insets 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "height": 16,
          "left": 0,
          "paddingBottom": 5,
          "paddingLeft": 3,
          "paddingRight": 4,
          "paddingTop": 2,
          "top": 0,
          "width": 10,
        }
      }
    />
  </RNCSafeAreaView>
</RNCSafeAreaView>
`;

exports[`SafeAreaProvider uses parent insets when available 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    onInsetsChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "height": 100,
          "left": 0,
          "paddingBottom": 4,
          "paddingLeft": 2,
          "paddingRight": 3,
          "paddingTop": 1,
          "top": 0,
          "width": 100,
        }
      }
    />
  </RNCSafeAreaView>
</RNCSafeAreaView>
`;
